fix: resolve avisos e warnings reportados pela IDE no backend (imports nao utilizados, deprecacoes e vazamento de recurso)